Url upload error tags are added Signed-off-by: akorolev <akorolex@yahoo.com>

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -59,6 +59,10 @@ section {
   @extend .row;
   margin-top: 20px;
   }
+.row, section {
+  max-width: 120rem;
+}
+
 
 .button.social-login {
   font-weight: bold !important;
