--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -3,12 +3,15 @@
 
   <div class="form-inputs">
     <%= f.input :title, required: true, placeholder: "Maximum title size is 50 characters",  input_html: {:maxlength => 50} %>
-    <%= f.input :description, placeholder: "Short description for a whole lot", input_html: {rows: 8 } %>
+    <%= f.input :description, placeholder: "Short description for a whole lot", input_html: {rows: 4 } %>
     <%= f.input :price, prefix: "$", wrapper: :label_prefix_input  %>
-    <%= f.input :pickup_allowed, :input_html => { id: 'show_pickup' } %>
-    <%= f.input :pickup_description, label: false, placeholder: "Pickup instructions. They will be invisible unlless purchase is complete", :input_html => { id: 'pickup', style: "display: none"} %>
 
-    <% for i in 1..3 %>
+    <fieldset>
+      <legend>Delivery and pickup</legend>
+      <%= f.input :pickup_allowed, :input_html => { id: 'show_pickup' } %>
+      <%= f.input :pickup_description, label: false, placeholder: "Pickup instructions. They will be invisible unlless purchase is complete", :input_html => { id: 'pickup', style: "display: none"} %>
+
+      <% for i in 1..3 %>
         <%= content_tag :div, class: "row" do %>
 
             <%= content_tag :div, class: "small-2 columns" do %>
@@ -22,17 +25,19 @@
             <% end %>
 
         <% end %>
-    <% end %>
-
+      <% end %>
+    </fieldset>
     <%= f.input :id, :as => :hidden %>
   </div>
 
 <% end %>
 
-<%= content_tag :div, class: "row " do %>
+<fieldset>
+  <legend>Images</legend>
+<%= content_tag :div, class: "row" do %>
     <%= content_tag :div, class: "small-2 columns" do %>
         <%= button_tag( id: "url_button", type: "button") do%>
-            <%= fa_icon("globe lg") %> <span>Upload web image</span>
+            <%= fa_icon("globe lg") %> <span>Upload web images</span>
         <% end %>
     <% end %>
     <%= content_tag :div, class: "small-10	columns" do %>
@@ -47,15 +52,16 @@
       <%= f.file_field :photo, multiple: true, class: "fileField" %>
     </div>
   <% end %>
-
+  <%= content_tag :div, class: "row" do %>
   <!-- The loading indicator is shown during image processing -->
   <div class="fileupload-loading"></div>
   <br>
   <!-- The table listing the files available for upload/download -->
   <table class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody>
   </table>
-
+  <% end %>
 <% end %>
+</fieldset>
 
 <%= content_tag :div, class: "row" do %>
 <input type="submit" class="button" onclick="document.forms[0].submit();" />
