Trying to make a nice image selection.
Signed-off-by: Alexey Korolev <akorolex@gmail.com>

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,15 @@
  *= require_tree .
  */
 @import "font-awesome";
+
+/* DELETE ME !!!!!!!!!!!!!!!!!*/
+.fb > input[type=radio]{
+  display:none;
+}
+input[type=radio] + i{
+  cursor:pointer;
+  color: black;
+}
+input[type=radio]:checked + i{
+  color: gold;
+}
