--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,60 @@
        <%= yield %>
        <div id="form-place" class="reveal-modal tiny" data-reveal>
        </div>
+  <ul class="small-block-grid-3 medium-block-grid-4 large-block-grid-6">
+    <li style="position: relative; width: 250px; height: 250px;">
+      <img src="http://placehold.it/300x300" style="z-index: -1;">
+      <a href="#" class="button alert round tiny" style="position: absolute; top:10px; right: 20px;"><i class="fa fa-trash-o fa-2x"></i></a>
+      <label class="fb" for="fb1" style="position: absolute; top:15px; left: 20px;">
+        <input id="fb1" type="radio" name="fb" value="" />
+        <i class="fa fa-star fa-2x"></i>
+      </label>
+    </li>
+    <li style="position: relative; width: 250px; height: 250px;">
+        <img src="http://placehold.it/250x250" style="position: absolute:top 10px">
+      <a href="#" class="button alert round tiny" style="position: absolute; top:10px; right: 20px;"><i class="fa fa-trash-o fa-2x"></i></a>
+      <label class="fb" for="fb2" style="position: absolute; top:15px; left: 20px;">
+        <input id="fb2" type="radio" name="fb" value="" />
+        <i class="fa fa-star fa-2x"></i>
+      </label>
+    </li>
+    <li style="position: relative; width: 250px; height: 250px;">
+      <img src="http://placehold.it/300x300" style="z-index: -1;">
+      <a href="#" class="button alert round tiny" style="position: absolute; top:10px; right: 20px;"><i class="fa fa-trash-o fa-2x"></i></a>
+      <label class="fb" for="fb6" style="position: absolute; top:15px; left: 20px;">
+        <input id="fb6" type="radio" name="fb" value="" />
+        <i class="fa fa-star fa-2x"></i>
+      </label>
+    </li>
+    <li style="position: relative; width: 250px; height: 250px;">
+      <img src="http://placehold.it/250x250" style="position: absolute:top 10px">
+      <a href="#" class="button alert round tiny" style="position: absolute; top:10px; right: 20px;"><i class="fa fa-trash-o fa-2x"></i></a>
+      <label class="fb" for="fb3" style="position: absolute; top:15px; left: 20px;">
+        <input id="fb3" type="radio" name="fb" value="" />
+        <i class="fa fa-star fa-2x"></i>
+      </label>
+    </li>
+    <li style="position: relative; width: 250px; height: 250px;">
+      <img src="http://placehold.it/300x300" style="z-index: -1;">
+      <a href="#" class="button alert round tiny" style="position: absolute; top:10px; right: 20px;"><i class="fa fa-trash-o fa-2x"></i></a>
+      <label class="fb" for="fb4" style="position: absolute; top:15px; left: 20px;">
+        <input id="fb4" type="radio" name="fb" value="" />
+        <i class="fa fa-star fa-2x"></i>
+      </label>
+    </li>
+    <li style="position: relative; width: 250px; height: 250px;">
+      <img src="http://placehold.it/250x250" style="position: absolute:top 10px">
+      <a href="#" class="button alert round tiny" style="position: absolute; top:10px; right: 20px;"><i class="fa fa-trash-o fa-2x"></i></a>
+      <label class="fb" for="fb5" style="position: absolute; top:15px; left: 20px;">
+        <input id="fb5" type="radio" name="fb" value="" />
+        <i class="fa fa-star fa-2x"></i>
+      </label>
+    </li>
 
 
+  </ul>
 
-<div class="row" data-match-height>
+      <div class="row" data-match-height>
   <div data-height-watch class="large-3 columns" style="background: pink;">
     <p>Some text...</p>
   </div>
