--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -17,3 +17,14 @@
   opacity: 0;
   filter: alpha(opacity=0);
 }
+
+.main_image > input[type=radio]{
+  display:none;
+}
+input[type=radio] + i{
+  cursor:pointer;
+  color: black;
+}
+input[type=radio]:checked + i{
+  color: gold;
+}
