--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -57,74 +57,63 @@
   <div class="fileupload-loading"></div>
   <br>
   <!-- The table listing the files available for upload/download -->
-  <table class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody>
-  </table>
+  <ul class="small-block-grid-3 medium-block-grid-4 large-block-grid-6 files"  data-toggle="modal-gallery" data-target="#modal-gallery">
   <% end %>
 <% end %>
 </fieldset>
 
 <%= content_tag :div, class: "row" do %>
-<input type="submit" class="button" onclick="document.forms[0].submit();" />
+<input type="submit" class="button" id="submit_product" value="Finish" />
 <% end %>
 
 
 <!-- The template to display files available for upload -->
 <script id="template-upload" type="text/x-tmpl">
   {% for (var i=0, file; file=o.files[i]; i++) { %}
-  <tr class="template-upload fade">
-    <td class="preview"><span class="fade"></span></td>
-    <td class="name"><span>{%=file.name%}</span></td>
-    <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td>
+  <li style="position: relative; width: 250px; height: 250px;" class="template-upload">
+    <div class="preview"></div>
+    <div class="name">{%=file.name%}</div>
+    <div class="size">{%=o.formatFileSize(file.size)%}</div>
     {% if (file.error) { %}
-    <td class="error" colspan="2"><span class="label label-important">{%=locale.fileupload.error%}</span> {%=locale.fileupload.errors[file.error] || file.error%}</td>
+    <div class="error" ><span class="label label-important">{%=locale.fileupload.error%}</span> {%=locale.fileupload.errors[file.error] || file.error%}</div>
     {% } else if (o.files.valid && !i) { %}
-    <td>
+    <div>
       <div class="progress progress-success progress-striped active"><div class="bar" style="width:0%;"></div></div>
-    </td>
-    <td class="start">{% if (!o.options.autoUpload) { %}
-      <button class="btn btn-primary">
-        <i class="icon-upload icon-white"></i>
-        <span>{%=locale.fileupload.start%}</span>
-      </button>
-      {% } %}</td>
-    {% } else { %}
-    <td colspan="2"></td>
+    </div>
     {% } %}
-    <td class="cancel">{% if (!i) { %}
+    <div class="cancel">{% if (!i) { %}
       <button class="btn btn-warning">
         <i class="icon-ban-circle icon-white"></i>
         <span>{%=locale.fileupload.cancel%}</span>
       </button>
-      {% } %}</td>
-  </tr>
+      {% } %}</div>
+  </li>
   {% } %}
 </script>
 <!-- The template to display files available for download -->
 <script id="template-download" type="text/x-tmpl">
   {% for (var i=0, file; file=o.files[i]; i++) { %}
-    <tr class="template-download fade">
+    <li style="position: relative; width: 250px; height: 250px;" class="template-download">
       {% if (file.error) { %}
-        <td></td>
-        <td class="name"><span>{%=file.name%}</span></td>
-        <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td>
-        <td class="error" colspan="2"><span class="label label-important">{%=locale.fileupload.error%}</span> {%=locale.fileupload.errors[file.error] || file.error%}</td>
+        <div class="name">{%=file.name%}</div>
+        <div class="size">{%=o.formatFileSize(file.size)%}</div>
+        <div class="error">{%=locale.fileupload.error%} {%=locale.fileupload.errors[file.error] || file.error%}</div>
         {% } else { %}
-        <td class="preview">{% if (file.thumbnail_url) { %}
-          <a href="{%=file.url%}" title="{%=file.name%}" rel="gallery" download="{%=file.name%}"><img src="{%=file.thumbnail_url%}"></a>
-          {% } %}</td>
-        <td class="name">
-          <a href="{%=file.url%}" title="{%=file.name%}" rel="{%=file.thumbnail_url&&'gallery'%}" download="{%=file.name%}">{%=file.name%}</a>
-        </td>
-        <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td>
-        <td colspan="2"></td>
+        {% if (file.thumbnail_url) { %}
+          <img src="{%=file.thumbnail_url%}" style="position: absolute:top 10px">
+          <div class="delete">
+            <button data-url="{%=file.delete_url%}" data-type="{%=file.delete_type%}" class="" style="position: absolute; top:35px; left: 12px; background:transparent; color:red; padding:0;"><i class="fa fa-trash-o fa-lg"></i></button>
+          </div>
+
+          <label class="main_image" for="{%=file.id%}" style="position: absolute; top:10px; left: 15px;">
+            <input id="{%=file.id%}" type="radio" name="main_image" value="{%=file.id%}" />
+            <i class="fa fa-star fa-lg"></i>
+          </label>
+
         {% } %}
-      <td class="delete">
-        <button class="btn btn-danger" data-type="{%=file.delete_type%}" data-url="{%=file.delete_url%}">
-          <i class="icon-trash icon-white"></i>
-          <span>{%=locale.fileupload.destroy%}</span>
-        </button>
-      </td>
-    </tr>
+        <div class="size">{%=o.formatFileSize(file.size)%}</div>
+        {% } %}
+    </li>
     {% } %}
 </script>
 
