--- a/app/views/lots/_form.html.erb
+++ b/app/views/lots/_form.html.erb
@@ -1,58 +1,17 @@
 <%= simple_form_for @lot,  wrapper: :label_hor do |f| %>
   <%= f.error_notification %>
-  <%#= TODO remove action name print %>
-  <%= action_name %>
   <div class="form-inputs">
     <%= f.input :title, help: true, required: true, placeholder: "Maximum lot title size is 50 characters",  input_html: {:maxlength => 50} %>
     <%= f.input :description, required: true, placeholder: "Short description for a whole lot", input_html: {rows: 8 } %>
-    <%= f.input :end_date, help: true, required: true, label: "Expire date", placeholder: "Last date to book orders, maximum 90 days", :input_html => { :id => 'datetimepicker', value: time_format(@lot.end_date) }, as: :string %>
-    <%= f.input :prepay, prefix: "%", wrapper: :label_prefix_input %>
-    <%= f.input :fee, label: "Organiser fee", prefix: "%", wrapper: :label_prefix_input %>
+    <%= f.input :condition, required: true, label: "Lot conditions",placeholder: "Lot conditions (payments, refunds, etc)", input_html: {rows: 4 } %>
+    <%= f.input :duration, label: "Lot duration",help: true, required: true, prefix: "days", wrapper: :label_prefix_input %>
+    <%= f.input :delivery_time, label: "Maximum delivery time", help: true, required: true, prefix: "days", wrapper: :label_prefix_input %>
     <%= f.input :min_order, label: "Activation sum", prefix: "$", wrapper: :label_prefix_input %>
+    <%= f.input :prepay, prefix: "%", wrapper: :label_prefix_input %>
 
-    <%= f.input :condition, required: true, label: "Lot conditions",placeholder: "Lot conditions (payment, refund, delivery, etc)", input_html: {rows: 4 } %>
     <%= f.input :source, label: "Supplier", placeholder: "Link to a supplier's web site" %>
+    <%= f.input :fee, label: "Organiser fee", prefix: "%", wrapper: :label_prefix_input %>
 
-    <%= f.input :pickup_allowed, :input_html => { id: 'show_pickup' } %>
-    <%= f.input :pickup_description, label: false, placeholder: "Pickup instructions. They will be invisible unlless purchase is complete", :input_html => { id: 'pickup', style: "display: none"} %>
-
-    <% for i in 1..3 %>
-    <%= content_tag :div, class: "row" do %>
-
-      <%= content_tag :div, class: "small-2 columns" do %>
-        <%= f.label (i == 1) ? :shipping : " " %>
-      <% end %>
-      <%= content_tag :div, class: "small-2 columns" do %>
-        <%= f.input "postage_val#{i}", prefix: "$", wrapper: :prefix_input %>
-      <% end %>
-      <%= content_tag :div, class: "small-8	columns" do %>
-        <%= f.input "postage_info#{i}", placeholder: "Details", wrapper: :no_divs_labels %>
-      <% end %>
-
-    <% end %>
-    <% end %>
-
-    <%= f.input :keywords %>
-    <%#= f.input :status %>
-    <%#= f.input :terms_of_service, required: true, as: :boolean %>
-
-    <%= content_tag :div, class: "row" do %>
-      <%= content_tag :div, class: "small-2 columns" do %>
-        <% category_label_class = @lot.errors[:category_id].empty? ? "" : "error" %>
-        <%= f.label :sub_category_lvl0, "Default category", class: category_label_class %>
-      <% end %>
-
-      <% for i in 0..CategoriesController::LVL_MASK.length %>
-      <%= content_tag :div, class: "small-3 columns" do %>
-        <%= f.input "sub_category_lvl#{i}", as: :select, wrapper: :no_divs_labels do %>
-          <% f.select "sub_category_lvl#{i}", @lot.send("sub_category_lvl#{i}"), {}, {size: 5}%>
-        <% end %>
-      <% end %>
-      <% end %>
-
-    <% end %>
-
-    <%#= f.association :user %>
   </div>
 
   <div class="form-actions">
