Minor fixes todo lists
Signed-off-by: Alexey Korolev <akorolex@gmail.com>

--- a/app/views/lots/populate.html.erb
+++ b/app/views/lots/populate.html.erb
@@ -1,3 +1,5 @@
+<!--TODO 1. Add lot information, lot edit and lot start
+         2. New item is ugly make it nice -->
 
 <ul class="small-block-grid-3 medium-block-grid-4 large-block-grid-6">
   <% @lot_products.each do |prod| %>
@@ -5,7 +7,7 @@
 
       <li style="position: relative; width: 320px; height: 500px;" >
         <ul class="pricing-table">
-        <li class="title"><%= prod.title %></li>
+        <li class="title" style="height: 62px;"><%= prod.title %></li>
         <li class="price"><%= number_to_currency(prod.price, :unit => "$")%></li>
         <li class="bullet-item">
           <div style="height: 200px">
