--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,3 +1,6 @@
+<!--TODO 1. Add cancell button, remove show, back button -->
+
+
 <%= simple_form_for @product, wrapper: :label_hor do |f| %>
   <%= f.error_notification %>
 
