Lot populate looks better now. Fixed minor bugs.

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,5 @@
 <!--TODO 1. Add cancell button, remove show, back button -->
+<!--TODO 2. Fix pickup description -->
 
 
 <%= simple_form_for @product, wrapper: :label_hor do |f| %>
