--- a/app/views/lots/populate.html.erb
+++ b/app/views/lots/populate.html.erb
@@ -1,59 +1,42 @@
 <!--TODO 1. Add lot information, lot edit and lot start -->
+<div class="row">
+  <h1> <%= @lot.title %></h1>
+</div>
+<div class="row">
+  <div class="small-8 columns">
+    <p> Description: <br>
+      <%= @lot.description %>
+    </p>
+    <p> Conditions: <br>
+      <%= @lot.condition %>
+    </p>
+  </div>
+  <div class="small-4 columns">
+    <table>
+      <tr>
+        <td><%=fa_icon("clock-o lg")%> Duration: </td>
+        <td> <%= @lot.duration %> days</td>
+      </tr>
+      <tr>
+        <td><%=fa_icon("truck lg") %> Maximum delivery time  </td>
+        <td><%= @lot.delivery_time %> days</td>
+      </tr>
+      <tr>
+        <td>$ Activation sum  </td>
+        <td> <%= number_to_currency(@lot.min_order, :unit => '$') %> </td>
+      </tr>
+      <tr>
+        <td>% Prepay </td>
+        <td><%= @lot.prepay %> %</td>
+      </tr>
+    </table>
+    <% if @lot_products.count > 0%>
+        <%= link_to({controller: 'lots', action: "update", id: @lot.id, status: "1"}, {class: "button round success"}) do %>
+            <%=fa_icon("rocket lg")%> Start lot!
+        <% end %>
+    <% end%>
 
-<ul class="small-block-grid-3 medium-block-grid-4 large-block-grid-6">
-  <% @lot_products.each do |prod| %>
-      <li style="position: relative; width: 320px; height: 500px;" >
-        <ul class="pricing-table">
-        <li class="title" style="height: 62px;"><%= prod.title %></li>
-        <li class="price"><%= number_to_currency(prod.price, :unit => '$')%></li>
-        <li class="bullet-item">
-          <div style="height: 200px">
-            <%= image_tag prod.product_images.first.photo.url(:medium) %>
-          </div>
-        </li>
+  </div>
 
-        <li class="cta-button">
-          <ul class="button-group radius">
-            <li>
-              <%=link_to({controller: 'products', action: "edit", id: prod.id}, {class: "button secondary  tiny"}) do %>
-                  <i class="fa fa-edit fa-lg"></i>
-                  <span> Edit</span>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to({controller: 'products', action: "new", copy_product_id: prod.id}, {class: "button tiny success"}) do %>
-                  <i class="fa fa-files-o fa-lg"></i> <span> Copy</span>
-              <% end %>
-            </li>
-            <li>
-              <%=link_to(prod, method: :delete, data: { confirm: 'Are you sure?' }, class: "button tiny alert") do %>
-                <i class="fa fa-trash-o fa-lg"></i>
-                <span> Delete</span>
-              <% end %>
-            </li>
-          </ul>
-        </li>
-        </ul>
-      </li>
-  <% end %>
-      <li style="position: relative; width: 320px; height: 500px;" >
-        <ul class="pricing-table">
-          <li class="title" style="height: 62px;">New product</li>
-          <li class="price"> &nbsp;</li>
-
-          <li class="bullet-item">
-            <div style="height: 200px">
-               <%= link_to image_tag("new_product.jpeg"), {action: 'new', controller: 'products', lot_id: @lot.id} %>
-            </div>
-          </li>
-          <li class="cta-button">
-            <%=link_to({controller: 'products', action: "new",lot_id: @lot.id}, {class: "button success expand tiny"}) do %>
-                <i class="fa fa-plus fa-lg"></i>
-                <span> Add new product </span>
-            <% end %>
-
-          </li>
-
-        </ul>
-      </li>
-</ul>
+</div>
+<%= render 'populate_form' %>
