--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -28,7 +28,7 @@
     <fieldset>
       <legend>Delivery and pickup</legend>
       <%= f.input :pickup_allowed, :input_html => { id: 'show_pickup' } %>
-      <%= f.input :pickup_description, label: false, placeholder: "Pickup instructions", :input_html => { id: 'pickup', style: "display: none"} %>
+      <%= f.input :pickup_description, label: false, placeholder: "Pickup locations", :input_html => { id: 'pickup', style: "display: none"} %>
 
       <% for i in 1..3 %>
         <%= content_tag :div, class: "row" do %>
