--- a/app/views/lots/manage.html.erb
+++ b/app/views/lots/manage.html.erb
@@ -1,6 +1,13 @@
 <% @lots.each do |lot| %>
     <fieldset style="position: relative; height: 160">
       <legend> <%= lot.title %> </legend>
+      <% lot.products.each do |product| %>
+        <div class="slick">
+          <%= image_tag product.product_images.first.photo.url(:thumb)%>
+        </div>
+      <% end %>
+
+
       <div class="row" style="position: absolute; bottom:0px; left: 0px; background: lavenderblush">
         <div class="small-10  columns">
           Status : <%= lot.status %>
