Lot listing layout WIP Started lot manage panel

--- a/app/views/lots/manage.html.erb
+++ b/app/views/lots/manage.html.erb
@@ -1,23 +1,26 @@
 
 
 <% @lots.each do |lot| %>
-    <div class="owl-carousel">
-      <% lot.products.each do |product| %>
-          <%= image_tag product.product_images.first.photo.url(:medium)%>
-      <% end %>
-    </div>
 
-    <fieldset style="position: relative; height: 160">
-      <legend> <%= lot.title %> </legend>
+    <div style="position: relative; height: 360px; border: solid #ffffff">
 
-
-      <div class="row" style="position: absolute; bottom:0px; left: 0px; background: lavenderblush">
-        <div class="small-10  columns">
+      <div class="row" style="position: absolute; bottom:0px; left: 0px;" >
+        <div class="small-4  columns">
+          <strong> <%= lot.title %> </strong>
+          <br>
           Status : <%= lot.status %>
-        </div>
-        <div class="small-2 columns">
+          <br>
           Products : <%= lot.products.count %>
         </div>
+        <div class="small-8  columns">
+          <div class="owl-carousel">
+            <% lot.products.each do |product| %>
+                <%= image_tag product.product_images.first.photo.url(:medium)%>
+            <% end %>
+          </div>
+
+        </div>
+
       </div>
-    </fieldset>
+    </div>
 <% end %>
