Fixed delivery check box  bug. Fixed integer type issue. Improved elements outlook in lots manager.

--- a/app/views/lots/_populate_form.html.erb
+++ b/app/views/lots/_populate_form.html.erb
@@ -1,4 +1,24 @@
 <ul class="small-block-grid-3 medium-block-grid-4 large-block-grid-6">
+  <li style="position: relative; height: 500px;" >
+    <ul class="pricing-table">
+      <li class="title" style="height: 62px;">New product</li>
+      <li class="price"> &nbsp;</li>
+
+      <li class="bullet-item">
+        <div style="height: 200px">
+          <%= link_to image_tag("new_product.jpeg"), {action: 'new', controller: 'products', lot_id: @lot.id} %>
+        </div>
+      </li>
+      <li class="cta-button">
+        <%=link_to({controller: 'products', action: "new",lot_id: @lot.id}, {class: "button success expand tiny"}) do %>
+            <i class="fa fa-plus fa-lg"></i>
+            <span> Add new product </span>
+        <% end %>
+
+      </li>
+
+    </ul>
+  </li>
   <% @lot_products.each do |prod| %>
       <li style=" position: relative; height: 500px;" >
         <ul class="pricing-table">
@@ -36,24 +56,4 @@
         </ul>
       </li>
   <% end %>
-  <li style="position: relative; width: 320px; height: 500px;" >
-    <ul class="pricing-table">
-      <li class="title" style="height: 62px;">New product</li>
-      <li class="price"> &nbsp;</li>
-
-      <li class="bullet-item">
-        <div style="height: 200px">
-          <%= link_to image_tag("new_product.jpeg"), {action: 'new', controller: 'products', lot_id: @lot.id} %>
-        </div>
-      </li>
-      <li class="cta-button">
-        <%=link_to({controller: 'products', action: "new",lot_id: @lot.id}, {class: "button success expand tiny"}) do %>
-            <i class="fa fa-plus fa-lg"></i>
-            <span> Add new product </span>
-        <% end %>
-
-      </li>
-
-    </ul>
-  </li>
 </ul>
