--- a/app/views/lots/_form.html.erb
+++ b/app/views/lots/_form.html.erb
@@ -4,14 +4,14 @@
     <%= f.input :title, help: true, required: true, placeholder: "Maximum lot title size is 50 characters",  input_html: {:maxlength => 50} %>
     <%= f.input :description, required: true, placeholder: "Short description for a whole lot", input_html: {rows: 8 } %>
     <%= f.input :condition, required: true, label: "Lot conditions",placeholder: "Lot conditions (payments, refunds, etc)", input_html: {rows: 4 } %>
-    <%= f.input :duration, label: "Lot duration",help: true, required: true, prefix: "days", wrapper: :label_prefix_input %>
-    <%= f.input :delivery_time, label: "Delivery time", help: true, required: true, placeholder: "Range (e.g. 7-15)",prefix: "days", wrapper: :label_prefix_input %>
-    <%= f.input :min_order, label: "Activation sum", prefix: "$", wrapper: :label_prefix_input %>
-    <%= f.input :prepay, prefix: "%", wrapper: :label_prefix_input %>
+    <%= f.input :duration, as: :string, label: "Lot duration",help: true, required: true, prefix: "days", wrapper: :label_prefix_input %>
+    <%= f.input :delivery_time, as: :string, label: "Delivery time", help: true, required: true, placeholder: "Range (e.g. 7-15)",prefix: "days", wrapper: :label_prefix_input %>
+    <%= f.input :min_order, as: :string, label: "Activation sum", prefix: "$", wrapper: :label_prefix_input %>
+    <%= f.input :prepay, as: :string, prefix: "%", wrapper: :label_prefix_input %>
     <fieldset>
       <legend>Optional info about supplier </legend>
       <%= f.input :source, label: "Supplier", placeholder: "Link to a supplier's web site" %>
-      <%= f.input :fee, label: "Organiser fee", prefix: "%", wrapper: :label_prefix_input %>
+      <%= f.input :fee, as: :string, label: "Organiser fee", prefix: "%", wrapper: :label_prefix_input %>
     </fieldset>
   </div>
 
